build/log/idf_py_stderr_output_15490
/home/pi/remoteLED/main/remoteLED.c: In function '_http_event_handler':
/home/pi/remoteLED/main/remoteLED.c:125:31: warning: ordered comparison of pointer with integer zero [-Wextra]
  125 |                 if(auth_token > 0){
      |                               ^
/home/pi/remoteLED/main/remoteLED.c:126:59: error: macro "ESP_LOGI" requires 3 arguments, but only 1 given
  126 |                         ESP_LOGI("Auth token available...");
      |                                                           ^
In file included from /home/pi/remoteLED/main/remoteLED.c:5:
/home/pi/esp32/esp-idf/components/log/include/esp_log.h:72:9: note: macro "ESP_LOGI" defined here
   72 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |         ^~~~~~~~
/home/pi/remoteLED/main/remoteLED.c:126:25: error: 'ESP_LOGI' undeclared (first use in this function); did you mean 'ESP_LOG_MAX'?
  126 |                         ESP_LOGI("Auth token available...");
      |                         ^~~~~~~~
      |                         ESP_LOG_MAX
/home/pi/remoteLED/main/remoteLED.c:126:25: note: each undeclared identifier is reported only once for each function it appears in
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:82: esp-idf/main/CMakeFiles/__idf_main.dir/remoteLED.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
